stderr
Printer.java:14: error: cannot find symbol
        String displayText = this.function(number);
                                 ^
  symbol: method function(int)
Printer.java:15: error: cannot find symbol
        displayFunction(displayText);
        ^
  symbol:   method displayFunction(String)
  location: class Printer
PrinterTest.java:8: error: cannot find symbol
    public Printer printer = new Printer(FizzBuzz.fizzbuzz);
                                                 ^
  symbol:   variable fizzbuzz
  location: class FizzBuzz
PrinterTest.java:14: error: cannot find symbol
        printer.printNumberResult(2, this.display);
                                         ^
  symbol: variable display
4 errors
